unpackaged/main/default/objects/APXTConga4__Document_History_Detail__c/fields/APXTConga4__Document_History__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Document_History__c</fullName>
    <label>Document History</label>
    <referenceTo>APXTConga4__Document_History__c</referenceTo>
    <relationshipLabel>Document History Details</relationshipLabel>
    <relationshipName>Document_History_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>