unpackaged/main/default/objects/APXTConga4__Document_History_Detail__c/fields/APXTConga4__Document_Status__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Document_Status__c</fullName>
    <label>Document Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
                <default>true</default>
                <label>Generated</label>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>